# inbox-helper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  editorial.md  pyproject.toml
app/: __init__.py  agent.py  gmail_client.py  main.py  models.py  settings.py  utils.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: main.tsx  styles.css
client/src/api/: inboxApi.ts
client/src/components/: EmailListItem.tsx  EmailPanel.tsx  InboxApp.tsx  resizable.css
client/src/types/: index.ts
client/src/utils/: emailUtils.ts
prompts/: polite_reply.txt
scripts/: auth_gmail.py
tests/: conftest.py  test_draft.py
